tests/expected_invalid_parse_missing_match_arm_comma.diag.out
<input>:10:9: error: expected ',' between match arms
            Off => 2,
            ^^^
